--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .sec1 {
-    background-image: url('/images/iwojimaflag.png');
+    background-image: url('images/iwojimaflag.png');
     height:100%;
     background-position: center;
     background-repeat: no-repeat;
