--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
-.sec1 {
-    background-image: url('../images/iwojimaflag.png');
+html, body {
     height:100%;
+}
+
+
+.sec1 {
+    background-image: url('../images/iwojimaflag.jpg');
+    height:110%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,4 +21,11 @@
     color:white;
     font-weight:bold;
     background-color:rgba(0,0,0,0.5);
+}
+.itemp5 {
+    padding:17%;
+}
+.card:hover {
+    cursor: pointer;
+    background-color:rgba(0,0,0,0.4);
 }
