--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ html, body {
 .itemp5 {
     padding:17%;
 }
+.card {
+    box-shadow: 5px 10px;
+
+}
 .card:hover {
     cursor: pointer;
     background-color:rgba(0,0,0,0.4);
